@@ -2,9 +2,9 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        0*H->L
-   StepA:   100000*L->H,   100000*H->L, Max High=12us Total High=437417us
+   StepA:   120000*L->H,   120000*H->L, Max High=12us Total High=437417us
    StepB:        0*L->H,        0*H->L, Max High=0us Total High=0us
-Position[A]=100000
+Position[A]=120000
 
 Time in EnableA  max=192583 us, total=192583 us
 
