@@ -2,8 +2,11 @@ pre-0.20.x:
 This change scheduled for 0.20.1 has failed in sim_tests. Need to be checked again why
 - RampGenerator uses now the delayed start feature of the queue
 
-pre-0.20.2:
+pre-0.20.3:
 - Fix for issue #45: if enablePinHighActive has been set to PIN_UNDEFINED, the eternalEnableCall was cleared even in enablePinLowActive still in use.
+
+pre-0.20.2:
+- Bugfix for issue #46: Avoid creation of invalid command in ramp generator while deceleration
 
 0.20.1:
 - few minor speed ups
